# in-dataset-discovery-docs

./: README.md  main.py  pyproject.toml
.github/workflows/: deploy-docs-on-demand.yml
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/api-overview/: index.html
0.0.3/architecture/: index.html
0.0.3/automations/: index.html
0.0.3/configuration/: index.html
0.0.3/datastore/: index.html
0.0.3/deployment/: index.html
0.0.3/error-codes/: index.html
0.0.3/faq/: index.html
0.0.3/license/: index.html
0.0.3/logging/: index.html
0.0.3/maintenance/: index.html
0.0.3/onboarding/: index.html
0.0.3/openapi/: index.html
0.0.3/qa/: index.html
0.0.3/security/: index.html
0.0.4/: 404.html  index.html  openapi.json  sitemap.xml
0.0.4/api-overview/: index.html
0.0.4/architecture/: index.html
0.0.4/automations/: index.html
0.0.4/configuration/: index.html
0.0.4/datastore/: index.html
0.0.4/deployment/: index.html
0.0.4/error-codes/: index.html
0.0.4/faq/: index.html
0.0.4/license/: index.html
0.0.4/logging/: index.html
0.0.4/maintenance/: index.html
0.0.4/onboarding/: index.html
0.0.4/openapi/: index.html
0.0.4/qa/: index.html
0.0.4/search/: search_index.json
0.0.4/security/: index.html
0.0.5/: 404.html  index.html  openapi.json  sitemap.xml
0.0.5/api-overview/: index.html
0.0.5/architecture/: index.html
0.0.5/automations/: index.html
0.0.5/configuration/: index.html
0.0.5/datastore/: index.html
0.0.5/deployment/: index.html
0.0.5/error-codes/: index.html
0.0.5/faq/: index.html
docs/: mkdocs.yml
(+24 files in other folders)
