[project]
name = "in-data-discovery-docs"
version = "0.1.0"
description = "API docs for in-data-discovery (WP3) of DataGEMS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[dependency-groups]
dev = [
    "pre-commit>=2.20.0",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs>=1.6.1",
    "mike>=2.1.3",
    "neoteroi-mkdocs>=1.1.3",
    "pymdown-extensions>=10.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
